fixed gaps between hover cards

--- a/templates/static/blogs/css/blog_content.css
+++ b/templates/static/blogs/css/blog_content.css
@@ -16,3 +16,12 @@ div#content {
     display: inline-block;
     text-align: left;
 }
+
+div.center {
+    margin-bottom: 50px;
+}
+
+#hover{
+    margin-bottom:10px;
+    margin-top:0px;
+}
